RESOLVED FIXED 263175
REGRESSION(267849@main): MESSAGE_CHECK() failure when mouse events are being handled during a process swap
https://bugs.webkit.org/show_bug.cgi?id=263175
Summary REGRESSION(267849@main): MESSAGE_CHECK() failure when mouse events are being ...
Charlie Wolfe
Reported 2023-10-15 15:41:36 PDT
If an event is being handled by the web process during a process swap a message check in `WebPageProxy::didReceiveEvent()` will fail.
Attachments
Charlie Wolfe
Comment 1 2023-10-15 15:42:00 PDT
Charlie Wolfe
Comment 2 2023-10-15 15:46:16 PDT
EWS
Comment 3 2023-10-16 10:53:33 PDT
Committed 269366@main (0172e5a8bf88): <https://commits.webkit.org/269366@main> Reviewed commits have been landed. Closing PR #19099 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.