REGRESSION(267849@main): MESSAGE_CHECK() failure when mouse events are being handled during a process swap https://bugs.webkit.org/show_bug.cgi?id=263175 rdar://116942710

Reviewed by Wenson Hsieh.

On a process swap, events queued in the UI process will be cleared. This was needed before 267849@main,
because the `didReceiveEvent()` IPC messages would not be sent to dequeue the events after terminating
the source web process. After 267849@main, it’s possible for the completion handler to be called after
clearing the event queues. So the message checks in `didReceiveEvent()` expecting the event queues to
not be empty will fail. We can expect the completion handler to be called for crashed web processes, so
we shouldn’t need to clear the event queues on process termination anymore.

We should also send the next queued mouse/touch/key events even after the web process crashes.

Added `ProcessSwap.MouseEventDuringCrossSiteProvisionalNavigation` to verify the web process no longer
crashes when a mouse event is being handled during a cross-site provisional navigation.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::sendMouseEvent):
(WebKit::WebPageProxy::sendKeyEvent):
(WebKit::WebPageProxy::touchEventHandlingCompleted):
(WebKit::WebPageProxy::handleTouchEvent):
(WebKit::WebPageProxy::mouseEventHandlingCompleted):
(WebKit::WebPageProxy::keyEventHandlingCompleted):
(WebKit::WebPageProxy::didReceiveEvent):
(WebKit::WebPageProxy::resetStateAfterProcessExited):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:

Canonical link: https://commits.webkit.org/269366@main